@@ -2043,10 +2043,12 @@ allNamesIn tm = nub $ ni [] tm
     ni env (PIfThenElse _ c t f) = ni env c ++ ni env t ++ ni env f
     ni env (PLam fc n _ ty sc)  = ni env ty ++ ni (n:env) sc
     ni env (PPi p n _ ty sc) = niTacImp env p ++ ni env ty ++ ni (n:env) sc
+    ni env (PLet _ n _ ty val sc) = ni env ty ++ ni env val ++ ni (n:env) sc
     ni env (PHidden tm)    = ni env tm
     ni env (PRewrite _ l r _) = ni env l ++ ni env r
     ni env (PTyped l r)    = ni env l ++ ni env r
     ni env (PPair _ _ l r)   = ni env l ++ ni env r
+    ni env (PDPair _ _ (PRef _ n) Placeholder r)  = n : ni env r
     ni env (PDPair _ _ (PRef _ n) t r)  = ni env t ++ ni (n:env) r
     ni env (PDPair _ _ l t r)  = ni env l ++ ni env t ++ ni env r
     ni env (PAlternative a ls) = concatMap (ni env) ls
